History
-------

0.0.5 (unreleased)
~~~~~~~~~~~~~~~~~~

- Plone 4.3.x compatibility.


0.0.4 (2011-06-13)
~~~~~~~~~~~~~~~~~~

- Implemented i18n.
- Added z3c.autoinclude.plugin entry point.
- Now @@wf-doc uses main_template.
- Added @@wf-doc-user-friendly.


0.0.3 (22-november-2009)
~~~~~~~~~~~~~~~~~~~~~~~~

- Corrected packaging error: README.txt was not included in the released tarball :-(.

0.0.2 (22-november-2009)
~~~~~~~~~~~~~~~~~~~~~~~~

- Added "acquired" column to @@wf-doc.

0.0.1 (03-june-2009)
~~~~~~~~~~~~~~~~~~~~

- First release.


