@@ -1,23 +1,23 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
-    i18n_domain="prdg.ploneio">       
-    
+    i18n_domain="prdg.ploneio">
+
     <browser:page
         name="wf-graph"
         for="Products.DCWorkflow.interfaces.IDCWorkflowDefinition"
         class=".views.WFGraphView"
         permission="zope2.View"
-    />    
-    
+    />
+
     <browser:page
         name="wf-doc"
         for="Products.DCWorkflow.interfaces.IDCWorkflowDefinition"
         class=".views.WFDocView"
         permission="zope2.View"
         template="wfdoc.pt"
-    />        
-    
+    />
+
     <browser:page
         name="wf-doc-user-friendly"
         for="Products.DCWorkflow.interfaces.IDCWorkflowDefinition"
@@ -25,5 +25,12 @@
         permission="zope2.View"
         template="wfdoc.pt"
     />
-        
+
+    <browser:page
+        name="wf-validate"
+        for="Products.DCWorkflow.interfaces.IDCWorkflowDefinition"
+        class=".views.WFValidateView"
+        permission="zope2.View"
+    />
+
 </configure>
